network_policy/deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hp
  labels:
    project: hp
---
apiVersion: v1
kind: Namespace
metadata:
  name: dell
  labels:
    project: dell
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hp
  namespace: hp
  labels:
    project: hp
spec:
  selector:
    matchLabels:
      project: hp
  template:
    metadata:
      labels:
        project: hp
    spec:
      containers:
        - name: nginx-hp
          image: nginx
          ports:
            - containerPort: 80
              name: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dell
  namespace: dell
  labels:
    project: dell
spec:
  selector:
    matchLabels:
      project: dell
  template:
    metadata:
      labels:
        project: dell
    spec:
      containers:
        - name: nginx-dell
          image: nginx
          ports:
            - containerPort: 80

---
#Services manifest 

apiVersion: v1
kind: Service
metadata:
  name: hp-svc
  namespace: hp
spec:
  selector:
    project: hp
  ports:
    - port: 81
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: dell-svc
  namespace: dell
spec:
  selector:
    project: dell
  ports:
    - port: 82
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
