network_policy/dev-app-np.yml
# Allow inter communication between all dev-app pods
# Allow specific pods from dev-tool eg filebeat prometheous etc.
# Allow ingress controller pod

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-app-np
  namespace: dev-app
spec:
  podSelector: {}   # all pods in dev-app namespace
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev-app
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-alb
              app.kubernetes.io/component: csi-driver
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev-tool
          podSelector:
            matchLabels:
              app: filebeat-filebeat
